deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workshop-namespaces
spec:
  ports:
  - port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    name: workshop-namespaces
  sessionAffinity: None
  type: NodePort
