deploy/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: namespaces-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "namespaces.istio.prgcont.cz"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo
spec:
  hosts:
  - "namespaces.istio.prgcont.cz"
  gateways:
  - namespaces-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        exact: /create
    - uri:
        exact: /delete
    route:
    - destination:
        host: workshop-namespaces
        port:
          number: 9090
